// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`docs topic direct skill view matches the current output 1`] = `
"## Workflow Agent

Run the current workflow against a local test environment.

### References
- checklist.md
- troubleshooting.md
"
`;

exports[`docs topic focused nested path matches the current output 1`] = `
"## pattern-library

Use this subtree before falling back to broader references.

### /fixture/repo/docs/topics/platform/pattern-library/
  usage.md - Start here before opening deeper sections in the subtree.

### Skills
$content-cards - Review content card structures and their supporting references.
"
`;

exports[`docs topic focused path matches the current output 1`] = `
"## guides

Use local workflows first.
Need guided simulator setup.

Shared machine conventions.

### /fixture/home/.ngents/docs/topics/platform/docs/guides/
  shared.md - Shared workspace guidance.

### /fixture/repo/docs/topics/platform/docs/guides/
  session.md - local workspace setup
"
`;

exports[`docs topic index matches the current output 1`] = `
"Usage: docs topic [topic] [path]

## Topics

TOPIC     TITLE             DESCRIPTION
platform  Platform Library  platform docs
ops       Ops Notes         This summary is intentionally longer than sixty-four characte...

docs topic foo - view foo about/index first
docs topic foo bar/baz - focus one path inside the topic
"
`;

exports[`docs topic overview matches the current output 1`] = `
"Use \`docs topic platform <path>\` to focus one path inside the topic.

Shared machine-level platform context.
Read when: Need reusable machine docs.

# Topic: Platform Library

## Docs

### /fixture/repo/docs/topics/platform/
- overview.md - entry point

### /fixture/repo/docs/topics/platform/docs/guides/
- session.md - local workspace setup

### /fixture/home/.ngents/docs/topics/platform/
- overview.md - Global overview notes.

### /fixture/home/.ngents/docs/topics/platform/docs/guides/
- shared.md - Shared workspace guidance.

## Skills

### pattern-library
Path: /fixture/repo/docs/topics/platform/pattern-library/skills/content-cards/SKILL.md

$content-cards

### workflow-agent
Path: /fixture/repo/docs/topics/platform/workflow-agent/SKILL.md

Workflow skill.

$workflow-agent - Workflow-first checks.
"
`;

exports[`docs topic parked collection browser matches the current output 1`] = `
"# Topics: machine

TOPIC     TITLE             DESCRIPTION
platform  Platform Library  platform docs
ops       Ops Notes         This summary is intentionally longer than sixty-four characte...
"
`;
